2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in:
	* ValaBinding.addin.xml: Bump MD version.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* configure.in: Fix tarball name.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs:
	* Gui/ValaTextEditorExtension.cs: Track APIs.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track CompletionData API.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track API.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/ValaProject.cs: Track API.

2008-09-29  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/DataProvider.cs: Track API.

2008-09-23  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Gui/DataProvider.cs: Track changes in completion API.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* ValaBinding.mdp: Updated projects.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* ValaLanguageBinding.cs: Fix build.

2008-09-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Project/ValaProject.cs: More compiler flags tweaking
	for project packages.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs,
	  ProjectPad/ProjectReferencesExtension.cs,
	  ProjectPad/ProjectNodeExtension.cs,
	  Navigation/StructureNodeBuilder.cs,
	  Navigation/TypedefNodeBuilder.cs, Navigation/MacroNodeBuilder.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/ClassNodeBuilder.cs, Navigation/MemberNodeBuilder.cs,
	  Navigation/EnumeratorNodeBuilder.cs,
	  Navigation/LanguageItemCommandHandler.cs,
	  Navigation/GlobalsNodeBuilder.cs,
	  Navigation/VariableNodeBuilder.cs,
	  Navigation/FunctionNodeBuilder.cs,
	  Navigation/EnumerationNodeBuilder.cs,
	  Navigation/UnionNodeBuilder.cs, Navigation/NamespaceNodeBuilder.cs,